--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,16 +45,26 @@ jobs:
           docker push registry.${{ secrets.COFFEEHOUSE_HOST }}:5000/uprojects_react
           # Push Django
           docker push registry.${{ secrets.COFFEEHOUSE_HOST }}:5000/uprojects_django
-      
-      - name: Set up Remote Connection
-        uses: webfactory/ssh-agent@v0.5.2
-        with:
-          ssh-private-key: ${{ secrets.COFFEEHOUSE_KEY }}
 
-      - name: SSH Into the Server and Restart Docker Compose
-        run: |
-          ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ${{ secrets.COFFEEHOUSE_USER }}@${{ secrets.COFFEEHOUSE_HOST }} 'cd ${{ secrets.COFFEEHOUSE_COMPOSE }} && docker-compose down && docker-compose up -d'
-      # - name: Docker-Compose Remote Deployment
+      - name: Deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.COFFEEHOUSE_HOST }}
+          username: ${{ secrets.COFFEEHOUSE_USER }}
+          key: ${{ secrets.COFFEEHOUSE_KEY }}
+          script: |
+            cd ${{ secrets.COFFEEHOUSE_COMPOSE }}
+            docker-compose down
+            docker-compose up -d
+      # - name: Set up Remote Connection
+      #   uses: webfactory/ssh-agent@v0.5.2
+      #   with:
+      #     ssh-private-key: ${{ secrets.COFFEEHOUSE_KEY }}
+
+      # - name: SSH Into the Server and Restart Docker Compose
+      #   run: |
+      #     ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ${{ secrets.COFFEEHOUSE_USER }}@${{ secrets.COFFEEHOUSE_HOST }} 'cd ${{ secrets.COFFEEHOUSE_COMPOSE }} && docker-compose down && docker-compose up -d'
+      # # - name: Docker-Compose Remote Deployment
       #   uses: alex-ac/github-action-ssh-docker-compose@master
       #   with:
       #     ssh_host: ${{ secrets.COFFEEHOUSE_HOST }}
