--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -56,7 +56,8 @@ run pip install --no-cache /wheels/*
 # copy entrypoint.prod.sh
 COPY ./entrypoint.prod.sh .
 RUN sed -i 's/\r$//g' $APP_HOME/entrypoint.prod.sh
-RUN chmod +x $APP_HOME/entrypoint.prod.sh
+RUN chown $APP_HOME/entrypoint.prod.sh
+RUN chmod 555 $APP_HOME/entrypoint.prod.sh
 
 # copy project
 COPY . $APP_HOME
