--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -57,7 +57,7 @@ run pip install --no-cache /wheels/*
 COPY ./entrypoint.prod.sh .
 RUN sed -i 's/\r$//g' $APP_HOME/entrypoint.prod.sh
 RUN chown $APP_HOME/entrypoint.prod.sh
-RUN chmod 555 $APP_HOME/entrypoint.prod.sh
+RUN chmod 755 $APP_HOME/entrypoint.prod.sh
 
 # copy project
 COPY . $APP_HOME
@@ -69,4 +69,4 @@ COPY . $APP_HOME
 #USER app
 
 # run entrypoint.prod.sh
-ENTRYPOINT ["/home/app/web/entrypoint.prod.sh"]
+# ENTRYPOINT ["/home/app/web/entrypoint.prod.sh"]
