--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,10 @@
 /coverage
 
 # production
-/build
-
+*/build
+*/node_modules
+*/*/migrations
+*/db.sqlite3
 # misc
 .DS_Store
 .idea
@@ -17,9 +19,6 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/frontend/node_modules/
-/frontend/build/
