--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,19 +20,8 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": "src",
-    "paths": {
-      "@apis/*": ["apis/*"],
-      "@assets/*": ["assets/*"],
-      "@components/*": ["components/*"],
-      "@contexts/*": ["contexts/*"],
-      "@helpers/*": ["helpers/*"],
-      "@hooks/*": ["hooks/*"],
-      "@layouts/*": ["layouts/*"],
-      "@styles/*": ["styles/*"],
-      "@types/*": ["types/*"],
-      "@views/*": ["views/*"],
-    }
   },
+  "types": ["node"],
   "include": [
     "src"
   ]
