--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       - ./frontend/nginx:/etc/nginx/conf.d/:ro
     ports:
       - '3000:80'
+    env_file:
+      - frontend/.env
     networks:
       - framework
 networks:
