--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -17,9 +17,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends gcc
 
 # lint
 RUN pip install --upgrade pip
-RUN pip install flake8==6.0.0
+# RUN pip install flake8==6.0.0
 COPY . /usr/src/app/
-RUN flake8 --exclude=venv/ --ignore=E501,F401 .
+# RUN flake8 --exclude=venv/ --ignore=E501,F401 .
 
 # install python dependencies
 COPY ./requirements.txt .
